# dht22-server

./: .gitignore  README.md
server/: Cargo.toml
server/src/: main.rs
server/src/html/: index.html
